--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "rollback": "knex migrate:rollback",
+    "migrate": "knex migrate:latest",
+    "seed": "knex seed:run",
+    "test": "cross-env NODE_ENV=testing jest"
   },
   "repository": {
     "type": "git",
@@ -12,11 +17,13 @@
   "dependencies": {
     "@vscode/sqlite3": "^5.1.6-vscode",
     "express": "^4.18.2",
-    "knex": "^2.5.1"
+    "knex": "^2.5.1",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "eslint": "^8.47.0",
+    "eslint-plugin-react": "^7.33.2",
     "jest": "^29.6.2",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
